--- a/.kratos.yaml
+++ b/.kratos.yaml
@@ -1,4 +1,3 @@
-dsn: memory
 session:
   lifespan: 24h
 serve:
@@ -12,9 +11,6 @@ selfservice:
     - http://127.0.0.1:4455/
     - http://127.0.0.1:4455/hydra/callback
     - http://127.0.0.1:4455/api/login
-  strategies:
-    password:
-      enabled: true
   flows:
     error:
       ui_url: http://127.0.0.1:4455/error
@@ -34,10 +30,8 @@ selfservice:
         default_browser_return_url: http://127.0.0.1:4455/
     login:
       ui_url: http://127.0.0.1:4455/login
-      request_lifespan: 10m
     registration:
       ui_url: http://127.0.0.1:4455/registration
-      request_lifespan: 10m
       after:
         password:
           hooks:
@@ -55,7 +49,7 @@ hashers:
     salt_length: 16
     key_length: 32
 identity:
-  default_schema_url: identity.traits.schema.json
-# courier:
-#   smtp:
-#     connection_uri: smtps://test:test@mailslurper:1025/?skip_ssl_verify=true
+  default_schema_url: file://identity.traits.schema.json
+courier:
+  smtp:
+    connection_uri: smtps://no-reply@pr1sm.gg:MIRT9yord_pes_buf@smtp.gmail.com:587/
